# CircleRenderer

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main_parallel.cpp  main_parallel_grid.cpp  parallel.cpp  sequential.cpp
performancelog/: performance_log.csv  performance_log.txt
pythonscripts/: plot.py
